RenderText::isAllCollapsibleWhitespace() shouldn't upconvert string to 16-bit. <http://webkit.org/b/109354>

Reviewed by Eric Seidel.

254 KB progression on Membuster3.

* rendering/RenderText.cpp:
(WebCore::RenderText::isAllCollapsibleWhitespace):


Canonical link: https://commits.webkit.org/127770@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142529 268f45cc-cd09-0410-ab3c-d52691b4dbfc